# sp_bot

./: Dockerfile  docker-compose.yml  pyproject.toml  run.py
app/: cmd_list.py  handlers.py  keyboards.py
app/alembic/: env.py
app/alembic/versions/: c127f1909d0d_initial.py  f7b7dcc2eba5_fix.py
app/bot/: cmd_list.py  filters.py
app/bot/common/: text.py
app/bot/handlers/: base.py  commands.py  common.py  materials.py  video.py
app/bot/handlers/admin/: base.py  category_settings.py  material_settings.py  video_settings.py
app/bot/keyboards/: builder.py  inline.py  reply.py
app/common/models/: category.py  material.py  user.py  video.py
app/common/repository/: category_repository.py  crud_base_repository.py  material_repository.py  user_repository.py  video_repository.py
app/core/: config.py
app/db/: base.py  base_class.py  session.py
